--- a/buildspec.yml
+++ b/buildspec.yml
@@ -3,7 +3,7 @@ version: 0.2
 phases:
   install:
     commands:
-      - npm install --save
+      - npm install
   build:
     commands:
       - npm run build
@@ -11,3 +11,4 @@ phases:
 artifacts:
   files:
     - '**/*'
+  base-directory: 'dist'  # Adjust this based on your actual build directory
